# ctoon

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  buildfile.m  ctoon.go  go.mod  liburlparser.html  pyproject.toml  requirements-dev.txt  version.py
.github/workflows/: cmake.yml  orchestrator.yml  process_release.py  release.md  release.yml  release_template.md  wheels.yml
cmake/: DynamicVersion.cmake  FixLCovPaths.cmake  GoToLcov.cmake  Optimize.cmake  SetupPython.cmake  Startup.cmake  coverage_iframe.html.in
docs/: CMakeLists.txt  CToonPages.cmake  CreateDocs.cmake  Doxyfile.in  InjectComment.cmake  cli.md  convert_page.py  ctoon-docs.css  footer.html.in  index.html.in  initial_comment.in  page.html.in  section.html.in
docs/cli/: examples.md  index.md  installation.md  options.md
docs/cpp/: CreateDocs.cmake  Doxyfile.in  footer.html.in
docs/images/: ctoon-ctoon.txt  ctoon-sq.txt
docs/matlab/: CreateDocs.cmake  extract_matlab_docs.py
docs/matlab/source/: index.rst  installation.md  installation.rst  usage.md  usage.rst
docs/python/: CreateDocs.cmake
docs/python/source/: cli.rst  conf.py  enums.rst  index.rst  json.rst  toon.rst
docs/python/source/_static/: custom.css
docs/python/source/_themes/ctoon/: ctoon-footer.html  ctoon-nav.html  ctoon-topbar.html  layout.html  page.html  theme.toml
docs/python/source/_themes/ctoon/static/: ctoon-sphinx.css
examples/: example_basic.cpp  example_tabular.cpp  sample2_objects.cpp  sample3_fileio.cpp  sample4_serialization.cpp
include/: ctoon.h
include/ctoon/: ctoon.h
includes/: ctoon.h  ordered_hash.h  serin.h
src/: ctoon.c
src/bindings/: ctoon.hpp
src/bindings/cpp/: ctoon.hpp
src/bindings/go/: binding.go
src/bindings/matlab/: CMakeLists.txt  CToonMatlabExport.cmake  buildfile.m  ctoon_build.m  ctoon_decode.m  ctoon_decode_json.m  ctoon_encode.m  ctoon_encode_json.m  ctoon_install.m  ctoon_mex.c  ctoon_read.m  ctoon_write.m
src/bindings/python/: CMakeLists.txt  binding.cpp
src/bindings/python/ctoon/: __init__.py  __main__.py  native_cli.py
src/bindings/python/ctoon/manager/: __init__.py  __main__.py
src/cli/: cli.cpp
src/cli/json/: CMakeLists.txt
src/sources/: cli.cpp  ctoon.c  ctoon.cpp  ctoon_json.cpp  ctoon_toon.cpp
tests/: CMakeLists.txt  GenerateIframe.cmake  coverage_dashboard.html.in  coverage_iframe.html.in  generate_iframe.cmake  genhtml.css
tests/c/: CMakeLists.txt  test_ctoon.c
tests/cpp/: CMakeLists.txt  test_ctoon.cpp
tests/data/: sample3_nested.toon
tests/go/: CMakeLists.txt  ctoon_test.go
tests/matlab/: CMakeLists.txt  test_ctoon_mex.m
tests/python/: CMakeLists.txt  test_json.py  test_toon.py
