[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "nanobind>=2.0.0"
]
build-backend = "scikit_build_core.build"


[project]
name = "ctoon"
dynamic = ["version"]
description = "A C++ TOON/JSON serialization library with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
]


[project.scripts]
ctoon = "ctoon.__main__:main"
"ctoon.manager" = "ctoon.manager:main"


[project.optional-dependencies]
test = ["pytest-xdist"]
docs = ["sphinx", "furo", "breathe", "exhale"]


[project.urls]
Homepage = "https://github.com/mohammadraziei/ctoon"
Repository = "https://github.com/mohammadraziei/ctoon"
Documentation = "https://mohammadraziei.github.io/ctoon"
"Bug Tracker" = "https://github.com/mohammadraziei/ctoon/issues"


[tool.scikit-build]
build.verbose = true
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "--no-warn-unused-cli"]
cmake.build-type = "Release"
cmake.define.CMAKE_BUILD_PARALLEL_LEVEL = "8"
cmake.define.CTOON_BUILD_PYTHON = "ON"
cmake.define.CTOON_BUILD_TESTS = "OFF"
cmake.define.CTOON_BUILD_DOCS = "OFF"
cmake.define.CTOON_BUILD_EXAMPLES = "OFF"


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/ctoon.h"
regex = '''(?sx)
\#define \s+ CTOON_VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ CTOON_VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ CTOON_VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"


[tool.cibuildwheel]
test-command = "pytest {project}"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",  # Python 3.12
]
testpaths = ["tests/python"]


[tool.ruff]
target-version = "py38"
src = ["src"]


[tool.ruff.lint]
select = [
   "E", "F", "W", # flake8
   "B",           # flake8-bugbear
   "I",           # isort
   "ARG",         # flake8-unused-arguments
   "C4",          # flake8-comprehensions
   "EM",          # flake8-errmsg
   "ICN",         # flake8-import-conventions
   "ISC",         # flake8-implicit-str-concat
   "G",           # flake8-logging-format
   "PGH",         # pygrep-hooks
   "PIE",         # flake8-pie
   "PL",          # pylint
   "PT",          # flake8-pytest-style
   "PTH",         # flake8-use-pathlib
   "RET",         # flake8-return
   "RUF",         # Ruff-specific
   "SIM",         # flake8-simplify
   "T20",         # flake8-print
   "UP",          # pyupgrade
   "YTT",         # flake8-2020
   "NPY",         # NumPy specific rules
   "PD",          # pandas-vet
]
extend-ignore = [
   "PLR",    # Design related pylint codes
   "E501",   # Line too long
]
unfixable = [
   "T20",  # Removes print statements
   "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]
exclude = ["third_party"]


[tool.ruff.per-file-ignores]
"tests/**" = ["F841", "ARG001", "PT004"]
"src/**/__main__.py" = ["T20", "ARG001"]
"src/**/core.py" = ["ARG001", "F401"]
