set(CTOON_TEST_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(CTOON_TEST_BINARY_DIR ${CMAKE_BINARY_DIR}/tests)
set(CTOON_COVERAGE_BINARY_DIR ${CMAKE_BINARY_DIR}/coverage)

set(CTOON_COVERAGE_TOTAL_BINARY_DIR ${CTOON_COVERAGE_BINARY_DIR}/total)
set(CTOON_COVERAGE_CPP_BINARY_DIR ${CTOON_COVERAGE_BINARY_DIR}/cpp)
set(CTOON_COVERAGE_PYTHON_BINARY_DIR ${CTOON_COVERAGE_BINARY_DIR}/python)

file(REMOVE_RECURSE ${CTOON_COVERAGE_BINARY_DIR})
file(MAKE_DIRECTORY ${CTOON_COVERAGE_BINARY_DIR})

add_custom_target(ctoon_test
    COMMAND ${CMAKE_COMMAND} -E echo "-- Running All tests..."
)

add_custom_target(ctoon_coverage
    COMMAND ${CMAKE_COMMAND} -E echo "-- Running coverage for all languages ..."
)


find_package(Python3 COMPONENTS Interpreter REQUIRED)
find_program(LCOV_EXECUTABLE lcov)
find_program(GENHTML_EXECUTABLE genhtml)

add_subdirectory(${CTOON_TEST_SOURCE_DIR}/cpp)
add_subdirectory(${CTOON_TEST_SOURCE_DIR}/python)

if(TARGET ctoon_coverage_cpp AND TARGET ctoon_coverage_python)
    if(LCOV_EXECUTABLE AND GENHTML_EXECUTABLE)
        add_custom_target(ctoon_coverage_total
                # Clean previous coverage data
            COMMAND ${CMAKE_COMMAND} -E remove_directory ${CTOON_COVERAGE_TOTAL_BINARY_DIR}
            COMMAND ${CMAKE_COMMAND} -E make_directory ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/html
            # Merge C++ and Python coverage info files
            COMMAND ${CMAKE_COMMAND} -E echo "-- Merging C++ and Python coverage..."
            COMMAND ${LCOV_EXECUTABLE}
                    --add-tracefile ${CTOON_COVERAGE_CPP_BINARY_DIR}/coverage.lcov
                    --add-tracefile ${CTOON_COVERAGE_PYTHON_BINARY_DIR}/coverage.lcov
                    --output-file ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/coverage.lcov
            COMMAND ${CMAKE_COMMAND} -E echo "-- Total coverage info created at: ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/coverage.lcov"

            # Generate HTML report
            COMMAND ${CMAKE_COMMAND}
                -DCOV_FILE=${CTOON_COVERAGE_TOTAL_BINARY_DIR}/coverage.lcov
                -DPREFIX_PATH=${PROJECT_SOURCE_DIR}/
                -P ${PROJECT_SOURCE_DIR}/cmake/FixLCovPaths.cmake
            COMMAND ${CMAKE_COMMAND} -E echo "-- Generating HTML report..."
            COMMAND ${GENHTML_EXECUTABLE} --quiet
                    ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/coverage.lcov
                    --output-directory ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/html
                    --prefix ${PROJECT_SOURCE_DIR}
                    --title "CToon Total Coverage"
                    --css-file ${CTOON_TEST_SOURCE_DIR}/genhtml.css
                    --dark-mode
            COMMAND ${CMAKE_COMMAND}
                -DCOV_FILE=${CTOON_COVERAGE_TOTAL_BINARY_DIR}/coverage.lcov
                -DSOURCE_PATH=${PROJECT_SOURCE_DIR}/
                -P ${PROJECT_SOURCE_DIR}/cmake/FixLCovPaths.cmake
            COMMAND ${CMAKE_COMMAND} -E echo "-- HTML entry point created here: ${CTOON_COVERAGE_TOTAL_BINARY_DIR}/html/index.html"

            WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
            USES_TERMINAL
        )

        # Ensure this target runs only after both individual coverages are done
        add_dependencies(ctoon_coverage_total ctoon_coverage_cpp)
        add_dependencies(ctoon_coverage_total ctoon_coverage_python)

        add_dependencies(ctoon_coverage ctoon_coverage_total)
    endif()
endif()

# --- Generate Coverage Dashboard HTML ---
# Initialize the JSON array
set(COVERAGE_DATA_JSON "[")

# Check for Total Coverage (Merged)
if(TARGET ctoon_coverage_total)
    set(COVERAGE_DATA_JSON "${COVERAGE_DATA_JSON}
        {
            \"id\": \"total\",
            \"title\": \"Total Coverage\",
            \"badge\": \"Merged\",
            \"badgeClass\": \"total\",
            \"color\": \"#a371f7\",
            \"desc\": \"Combined coverage report for both C++ and Python codebases. Useful for SonarQube analysis.\",
            \"htmlLink\": \"total/html/index.html\",
            \"lcovLink\": \"total/coverage.lcov\"
        },")
endif()

# Check for C++ Coverage
if(TARGET ctoon_coverage_cpp)
    set(COVERAGE_DATA_JSON "${COVERAGE_DATA_JSON}
        {
            \"id\": \"cpp\",
            \"title\": \"C++ Core\",
            \"badge\": \"Native\",
            \"color\": \"#f0883e\",
            \"desc\": \"Detailed coverage report for the core C++ library, including headers and implementation files generated by LCOV.\",
            \"htmlLink\": \"cpp/index.html\",
            \"lcovLink\": \"cpp/coverage.lcov\"
        },")
endif()

# Check for Python Coverage
if(TARGET ctoon_coverage_python)
    set(COVERAGE_DATA_JSON "${COVERAGE_DATA_JSON}
        {
            \"id\": \"py\",
            \"title\": \"Python Bindings\",
            \"badge\": \"Interpreter\",
            \"color\": \"#3572A5\",
            \"desc\": \"Coverage analysis for Python bindings and high-level logic, generated by coverage.py.\",
            \"htmlLink\": \"python/index.html\",
            \"lcovLink\": \"python/coverage.lcov\"
        },")
endif()

# Remove the trailing comma if the list is not empty, then close the array
string(LENGTH "${COVERAGE_DATA_JSON}" JSON_LEN)
if(JSON_LEN GREATER 1)
    string(REGEX REPLACE ",$" "" COVERAGE_DATA_JSON "${COVERAGE_DATA_JSON}")
endif()

set(COVERAGE_DATA_JSON "${COVERAGE_DATA_JSON}]")
# Read SVG logo for navbar embedding
set(CTOON_LOGO_SVG "${PROJECT_SOURCE_DIR}/docs/images/ctoon-sq.svg")
if(EXISTS "${CTOON_LOGO_SVG}")
    file(READ "${CTOON_LOGO_SVG}" LOGO_CONTENT)
else()
    set(LOGO_CONTENT "")
endif()

# Configure the HTML file
configure_file(
    ${CTOON_TEST_SOURCE_DIR}/coverage_dashboard.html.in
    ${CTOON_COVERAGE_BINARY_DIR}/index.html
    @ONLY
)
